[package]
authors = ["{{authors}}"]
name = "{{project-name}}"
edition = "2018"
version = "0.1.0"

[lib]
harness = false

[dependencies]
tfl = {path = "../tfl"}
cortex-m = "0.7.1"
cortex-m-rt = "0.7.0"
defmt = "0.2.0"
defmt-rtt = "0.2.0"
defmt-test = "0.2.0"
panic-probe = { version = "0.2.0", features = ["print-defmt"] }