[package]
authors = ["Mart Bent <m.bent@teneo-iot.nl>"]
name = "mock-io"
publish = false
edition = "2018"
version = "0.1.0"

[lib]
harness = false

[dependencies]
cortex-m = "0.7.1"
cortex-m-rt = "0.7.0"
defmt = "0.2.0"
defmt-rtt = "0.2.0"
defmt-test = "0.2.0"
panic-probe = { version = "0.2.0", features = ["print-defmt"] }

[dependencies.stm32wl-hal]
git = "https://github.com/newAM/stm32wl-hal.git"
features = [
    "rt",
    "stm32wle5",
    "defmt",
]